--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "egg-acm",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "An egg plugin for aliyun acm.",
   "eggPlugin": {
     "name": "acm"
@@ -41,7 +41,8 @@
   "files": [
     "app.js",
     "agent.js",
-    "config"
+    "config",
+    "lib"
   ],
   "ci": {
     "version": "8, 9"
