--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "egg-acm",
-  "version": "1.0.1",
+  "version": "1.0.4",
   "description": "An egg plugin for aliyun acm.",
   "eggPlugin": {
     "name": "acm"
@@ -41,7 +41,8 @@
   "files": [
     "app.js",
     "agent.js",
-    "config"
+    "config",
+    "lib"
   ],
   "ci": {
     "version": "8, 9"
@@ -55,5 +56,7 @@
   },
   "homepage": "https://github.com/shuang6/egg-acm#readme",
   "author": "shuang6",
-  "license": "MIT"
+  "license": "MIT",
+  "_from": "egg-acm@1.0.3",
+  "_resolved": "http://registry.npm.taobao.org/egg-acm/download/egg-acm-1.0.3.tgz"
 }
